WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229808
REGRESSION (
r280767
): Caret color is black after pasting rich text in Mail compose in dark mode
https://bugs.webkit.org/show_bug.cgi?id=229808
Summary
REGRESSION (r280767): Caret color is black after pasting rich text in Mail co...
Wenson Hsieh
Reported
2021-09-02 08:01:35 PDT
rdar://82600990
Attachments
Patch
(7.45 KB, patch)
2021-09-02 08:54 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-09-02 08:54:42 PDT
Created
attachment 437155
[details]
Patch
EWS
Comment 2
2021-09-02 18:17:25 PDT
Committed
r281970
(
241277@main
): <
https://commits.webkit.org/241277@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437155
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug